# ai-agent-debate-assignment2

./: .env.example  .gitignore  README.md  pyproject.toml
config/: agents.json  app.json  debate.json  logging.json  providers.json  rate_limits.json  search.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  LESSONS_FROM_ASSIGNMENT1.md  PLAN.md  PRD.md  PROJECT_RULES.md  PROMPTS.md  PROTOCOL.md  QUALITY.md  REAL_RUN_PLAN.md  REQUIREMENTS_AUDIT.md  SCORING_AND_VALIDATION.md  TODO.md
prompts/agents/: con.md  judge.md  pro.md
prompts/protocol/: final_judgment.md  regeneration.md
results/real_run_20260602_2203/: cost_report.json  final_judgment.json  transcript.jsonl  transcript.md
results/real_run_20260602_2227_full10/: cost_report.json  final_judgment.json  transcript.jsonl  transcript.md
scripts/: check_file_lengths.py  check_json_configs.py  check_required_docs.py
src/agent_debate/: __init__.py
src/agent_debate/agents/: __init__.py  base.py  debate_agent.py  judge.py
src/agent_debate/cli/: __init__.py  main.py
src/agent_debate/config/: __init__.py  loader.py
src/agent_debate/evidence/: __init__.py  store.py
src/agent_debate/logging/: __init__.py
src/agent_debate/orchestration/: __init__.py  runner.py  session.py  watchdog.py
src/agent_debate/prompts/: __init__.py  loader.py  templates.py
src/agent_debate/protocol/: __init__.py  enums.py  models.py
src/agent_debate/providers/: __init__.py  base.py  claude_cli_provider.py  factory.py  mock_provider.py
src/agent_debate/quality/: __init__.py  gatekeeper.py
src/agent_debate/results/: __init__.py  cost_tracker.py  scoring.py  tie_breaker.py  transcript_writer.py
src/agent_debate/sdk/: __init__.py  service.py
src/agent_debate/search/: __init__.py  base.py  ddgs_backend.py  factory.py  mock_search.py  real_search.py
src/agent_debate/validation/: __init__.py  evidence_validator.py  protocol_validator.py  response_validator.py  result.py
tests/: conftest.py
tests/integration/: test_contracts.py
tests/unit/: test_agents.py  test_claude_cli_provider.py  test_cli.py  test_config_loader.py  test_config_values.py  test_cost_tracker.py  test_ddgs_backend.py  test_debate_runner.py  test_evidence_validator.py  test_gatekeeper.py  test_mock_provider.py  test_mock_search.py  test_prompt_loader.py  test_prompt_templates.py  test_protocol_models.py  test_protocol_validator.py  test_provider_factory.py  test_quality_scripts.py  test_real_search.py  test_repo_hygiene.py  test_response_validator.py  test_scoring_judgment.py  test_scoring_tiebreak.py  test_sdk_service.py  test_search_factory.py  test_session_result.py  test_skeleton.py  test_transcript_writer.py  test_watchdog.py
